--- a/config/GPT.yaml
+++ b/config/GPT.yaml
@@ -1,13 +1,15 @@
-max_seq_length: 128
+max_seq_length: 1024
 optimizer: "AdamW"  # "SGD", "AdamW"
-learning_rate: 1e-3  # 1e-4, 1e-3, 1e-2
+learning_rate: 1e-4  # 1e-4, 1e-3, 1e-2
 beta: 0.5
-batch_size: 1000
+batch_size: 6
 batch_accum_size: 60
 track_every_step: true
 project_name: "embed_training"
 entity_name: "timur-galimzyanov"
 max_steps: 100000 # 100000
-validate_per: 200
-save_period: 2000 # 2000
+validate_per: 2000
+save_period: 6000 # 2000
 out_folder: "/mnt/data2/galimzyanov/gpt2/embedings_ckpts/"
+max_val_samples: 600
+shuffle_seed: 42
