--- a/config/main_config.yaml
+++ b/config/main_config.yaml
@@ -4,26 +4,36 @@ general:
   num_workers: 1
 model:
   sequence_length: 512
-  model: "codellama/CodeLlama-7b-hf"
+  name: "deepseek-ai/deepseek-coder-1.3b-base" # "codellama/CodeLlama-7b-hf"
 train:
   num_epochs: 1
-  train_batch_size: 4
+  train_mini_batch_size: 4
+  train_batch_size: 128
   val_batch_size: 4
   num_gpus: 8
-  accumulate_grad: 128
   precision: "bf16"
-  device: 'cuda:1'
+  # device: 'cuda:1'
+  # steps|samples counters
+  # Prioritization: samples-steps-ratio
+  # samples = steps*full_batch_size
+  steps:
+    warmup_samples: 4000
+    warmup_steps: 1000
+    warmup_ratio: 0.01
+    val_every_sample: 8000
+    val_every_step: 2000
+    max_val_samples: 10000
+    max_val_steps: 2500
+    max_train_samples: 1000000
+    max_train_steps: 250000
+    save_every_sample: 20000
+    save_every_step: 5000
   # Optimizer settings
-  max_lr: 0.00001
+  max_lr: 0.0001
   weight_decay: 0.00
-  warmup_steps: 1000
   max_norm: 10000
   scheduler: 'cosine'
-  # Validation
-  validate_every: 2000
-  val_samples: 2000
   # Save settings
-  save_ckpts_every_sample: 20000
   upload_to_s3: False
   s3_checkpoint_path:
   model_checkpoints: 'mnt/data2/galimzyanov/llm-experiments/gpt2-zip-compression/'
