--- a/config/main_config.yaml
+++ b/config/main_config.yaml
@@ -9,7 +9,7 @@ general:
 model:
   sequence_length: 512
   name: "HuggingFaceTB/SmolLM-135M"# "deepseek-ai/deepseek-coder-1.3b-base" # "codellama/CodeLlama-7b-hf"
-  pretrained: true
+  pretrained: False
   use_flash_attn: true
 train:
   train_mini_batch_size: 2
@@ -25,16 +25,16 @@ train:
   # samples = steps*full_batch_size
   steps:
     num_epochs: 1
-    max_train_samples: 500
+    max_train_samples: 500_000_000
     max_train_steps: 250_000
     warmup_samples: 4000
     warmup_steps_or_ratio: 1000
-    val_every_sample: 8000
-    val_every_step: 2000
-    max_val_samples: 10000
-    max_val_steps: 2500
-    save_every_sample: 20_000
-    save_every_step: 5000
+    val_every_sample: null
+    val_every_step: 500
+    max_val_samples: 20000
+    max_val_steps: 5000
+    save_every_sample: null
+    save_every_step: 500
   # Optimizer settings
   max_lr: 0.0001
   weight_decay: 0.00
